--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h2 class="weather__title">Вітаємо!!!</h2>
-    <p class="weather__text">Прогноз погоди для вашого міста</p>
+    <p class="weather__text">Тут ви можете знайти свій улюблений фільм</p>
     <form action="submit" class="js-search">
       <input type="text" name="query" />
       <select name="days">
@@ -25,6 +25,7 @@
       <button>Шукати</button>
     </form>
     <ul class="js-list"></ul>
+    <button class="js-load" hidden>Завантажити ще...</button>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
