UPDATE INDEX JS

--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,8 @@
   <body>
     <h2 class="weather__title">Вітаємо!!!</h2>
     <p class="weather__text">Тут ви можете знайти свій улюблений фільм</p>
-    <form action="submit" class="js-search">
-      <input type="text" name="query" />
-      <select name="days">
-        <option value="3">3</option>
-        <option value="5">5</option>
-        <option value="7">7</option>
-        <option value="10">10</option>
-      </select>
-      <button>Шукати</button>
-    </form>
     <ul class="js-list"></ul>
+    <div class="js-guard"></div>
     <button class="js-load" hidden>Завантажити ще...</button>
     <script type="module" src="./js/index.js"></script>
   </body>
